[package]
name = "webgl-rs-practice"
version = "0.1.0"
authors = ["t420babe <t420babe@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
mat4 = "0.2.1"
nalgebra-glm = "0.3"
wasm-bindgen = "0.2.68"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'AudioNode',
  'CanvasRenderingContext2d',
  'console',
  'Document',
  'Element',
  'EventListener',
  'EventTarget',
  'HtmlElement',
  'HtmlButtonElement',
  'HtmlCanvasElement',
  'HtmlMediaElement',
  'HtmlParagraphElement',
  'MediaElementAudioSourceNode',
  'MouseEvent',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[profile.release]
lto = true
