[package]
name = "webgl-rs-practice"
version = "0.1.0"
authors = ["t420babe <t420babe@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.70"
wasm-bindgen-futures = "0.4.20"
mat4 = "0.2.1"

[dependencies.web-sys]
version = "0.3.45"
features = [
  'AnalyserNode',
  'AudioContext',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'MediaDevices',
  'MediaStream',
  'MediaStreamAudioSourceNode',
  'MediaStreamConstraints',
  'MediaTrackConstraints',
  'Navigator',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]

[profile.release]
lto = true
